# dpgen-lsp

./: .gitignore  LICENSE  README.md  lsp-capabilities.json  pyproject.toml
diagnostics/: diagnostic-engine-v1.schema.json
src/dpgen_lsp/: __init__.py  agent_lsp.py  agent_operations.py  constants.py  registry.py  rich_diagnostics.py  server.py  tool.py
src/dpgen_lsp/features/: code_actions.py  completion.py  diagnostic.py  formatting.py  hover.py  lint.py  typecheck.py
src/dpgen_lsp/handlers/: code_action.py  completion.py  definition.py  diagnostic.py  document_symbol.py  hover.py  references.py  rename.py
src/dpgen_lsp/schema/: json_path.py  loader.py
src/dpgen_lsp/wiki/concepts/: active_learning.md
src/dpgen_lsp/wiki/entities/: type_map.md
src/dpgen_lsp/wiki/synthesis/: fp_style_selection.md
tests/: test_completion.py  test_diagnostic.py  test_hover.py  test_json_path.py  test_loader.py  test_official_pipeline.py
